# StormBrewerEngine

./: .gitignore  .gitmodules  Audio.js  BootstrapGit.bat  BootstrapProject.bat  BootstrapProject.sh  BuildDebug.sh  BuildIOS.sh  BuildNormal.bat  BuildNormal.sh  BuildServer.sh  BuildShell.sh  BuildTools.sh  BuildWebDebug.bat  CMakeLists.txt  CMakeSettings.json  Commit.sh  DeployServer.sh  IOSBuild.cmake  Make.bat  Pull.bat  Pull.sh  SetBuildVars.bat  SetBuildVars.sh  SetupEnv.bat  SetupEnv.sh  StormBrewerEngine.cmake  StormBrewerEngine.sln  Upload.bat  Upload.py  WebRTC.js  WebShell.html  Websocket.js
DocumentServer/: CMakeLists.txt  Document.cpp  Document.h  DocumentServer.cpp  DocumentServer.h  DocumentServer.vcxproj  DocumentServer.vcxproj.filters  DocumentServerMessages.refl.h  DocumentServerMessages.refl.meta.h  FileNameDatabase.h  FileSystemWatcher.cpp  FileSystemWatcher.h  Main.cpp
Editor/: AudioViewer.cpp  AudioViewer.h  CMakeLists.txt  ConfigEditor.cpp  ConfigEditor.h  ConnectingDialog.cpp  ConnectingDialog.h  ConnectingDialog.ui  DocumentEditor.h  DocumentEditorBase.cpp  DocumentEditorBase.h  DocumentEditorConfig.cpp  DocumentEditorConfig.h  DocumentEditorWidgetBase.cpp  DocumentEditorWidgetBase.h  DocumentServerConnection.cpp  DocumentServerConnection.h  DocumentServerThread.cpp  DocumentServerThread.h  DocumentSubValueListMirror.h  DocumentValueWatcher.h  DrawUtil.cpp  DrawUtil.h  DrawUtilQt.h  Editor.vcxproj  Editor.vcxproj.filters  EditorContainer.cpp  EditorContainer.h  EditorContainer.qrc  EditorContainer.ui  EditorGL.cpp  EntityEditor.cpp  EntityEditor.h  FontViewer.cpp  FontViewer.h  FrameEditorAnchorEditor.cpp  FrameEditorAnchorEditor.h  FrameEditorAnchorManager.cpp  FrameEditorAnchorManager.h  FrameEditorBase.cpp  (+174 more)
Engine/: CMakeLists.gen  CMakeLists.txt  Engine.cpp  Engine.h  Engine.vcxproj  Engine.vcxproj.filters  EngineCommon.cpp  EngineCommon.h  EngineCommonPCH.cpp  EngineState.cpp  EngineState.h  EngineStateFuncs.h
EngineStubs/: CMakeLists.txt  EngineStubs.cpp  EngineStubs.vcxproj  EngineStubs.vcxproj.filters
Foundation/: CMakeLists.gen  CMakeLists.txt  Common.cpp  Common.h  Foundation.natvis  Foundation.vcxproj  Foundation.vcxproj.filters  FoundationShared.vcxitems  FoundationShared.vcxitems.filters  packages.config
Game/: CMakeLists.txt  Game.vcxproj  Game.vcxproj.filters  GameCollision.refl.h  GameCommon.h  GameController.refl.cpp  GameController.refl.h  GameController.refl.meta.h  GameEventReconciler.cpp  GameEventReconciler.h  GameFullState.refl.h  GameFullState.refl.meta.h  GameLevelList.cpp  GameLevelList.h  GameLevelListAsset.refl.h  GameLevelListAsset.refl.meta.h  GameLogicContainer.cpp  GameLogicContainer.h  GameMessages.refl.cpp  GameMessages.refl.h  GameMessages.refl.meta.h  GameNetworkData.refl.h  GameNetworkData.refl.meta.h  GameNetworkEvents.refl.cpp  GameNetworkEvents.refl.h  GameNetworkEvents.refl.meta.h  GameNetworkExternals.refl.cpp  GameNetworkExternals.refl.h  GameNetworkExternals.refl.meta.h  GameNetworkSettings.h  GameProtocol.h  GameServerEventSender.cpp  GameServerEventSender.h  GameServerTypes.cpp  GameServerTypes.h  GameSettings.h  GameSharedGlobalResources.cpp  GameSharedGlobalResources.h  GameSharedInstanceResources.cpp  GameSharedInstanceResources.h  (+12 more)
GameClient/: CMakeLists.gen  CMakeLists.txt  GameCamera.cpp  GameCamera.h  GameClient.vcxproj  GameClient.vcxproj.filters  GameClientCommon.cpp  GameClientCommon.h  GameClientController.refl.cpp  GameClientController.refl.h  GameClientController.refl.meta.h  GameClientEntitySync.cpp  GameClientEntitySync.h  GameClientEventSender.h  GameClientGlobalResources.cpp  GameClientGlobalResources.h  GameClientInputManager.cpp  GameClientInputManager.h  GameClientInstanceContainer.cpp  GameClientInstanceContainer.h  GameClientInstanceData.cpp  GameClientInstanceData.h  GameClientInstanceResources.cpp  GameClientInstanceResources.h  GameClientLevelLoader.cpp  GameClientLevelLoader.h  GameClientSave.cpp  GameClientSave.h  GameClientSaveFileData.refl.h  GameClientSaveFileData.refl.meta.h  GameClientSystems.cpp  GameClientUIManager.cpp  GameClientUIManager.h  GameContainer.cpp  GameContainer.h  GameGlobalResources.cpp  GameGlobalResources.h  GameMode.cpp  GameMode.h  GameModeConnecting.cpp  (+36 more)
GameClientExe/: CMakeLists.txt  GameClientExe.vcxproj  GameClientExe.vcxproj.filters  Main.cpp
GameServer/: CMakeLists.txt  GameClient.cpp  GameClient.h  GameClientConnection.cpp  GameClientConnection.h  GameEventReconciler.cpp  GameEventReconciler.h  GameInstance.cpp  GameInstance.h  GameInstanceManager.cpp  GameInstanceManager.h  GameInstanceStateBase.h  GameInstanceStateData.cpp  GameInstanceStateData.h  GameInstanceStateGameplay.cpp  GameInstanceStateGameplay.h  GameInstanceStateLoading.cpp  GameInstanceStateLoading.h  GameInstanceStatePrivateGameStaging.h  GameInstanceStateStaging.cpp  GameInstanceStateStaging.h  GameServer.cpp  GameServer.h  GameServer.vcxproj  GameServer.vcxproj.filters  GameServerGlobalResources.cpp  GameServerGlobalResources.h
GameServerExe/: CMakeLists.txt  GameServerExe.vcxproj  Main.cpp
QTUtil/: AnimationTrack.cpp  CMakeLists.txt  DraggableList.cpp  DraggableList.h  ExpandableList.cpp  ExpandableList.h  FocusWatcher.h  LerpVar.h  QTUtil.h  QTUtil.vcxproj  QTUtil.vcxproj.filters  qtutil_global.h
Runtime/: CMakeLists.txt  GenericResource.h  IntersectionDatabase.h  Runtime.cpp  Runtime.vcxproj  Runtime.vcxproj.filters  RuntimeCommon.cpp  RuntimeCommon.h  RuntimeState.cpp  RuntimeState.h  RuntimeStateFuncs.h
Server/: CMakeLists.txt  Server.vcxproj  Server.vcxproj.filters  ServerCommon.cpp  ServerCommon.h  ServerTypesJson.h
Shared/: CMakeLists.txt  Shared.vcxproj  Shared.vcxproj.filters  SharedCommon.cpp
StormExpr/: CMakeLists.txt  StormExpr.vcxproj  StormExpr.vcxproj.filters  StormExprBinding.cpp  StormExprBinding.h  StormExprDynamicBlock.cpp  StormExprEval.cpp  StormExprEval.h  StormExprEvalBuilder.cpp  StormExprEvalBuilder.h  StormExprFunctionList.cpp  StormExprHash.cpp  StormExprLiteralBlock.h  StormExprLiteralBlockBuilder.cpp  StormExprOperator.h  (+18 more)
(+2525 files in other folders)
